Fix mobile styling issues: remove large left margin on centered pages and prevent horizontal scroll in imgGallery

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1318,15 +1318,30 @@ ul.noPadding {
   width: 100%;
   position: relative;
 
+  @include media(xsmallScreen, smallScreen) {
+    overflow-x: hidden;
+  }
+
   .imgContainer {
     display: flex;
     align-items: center;
     gap: 1em;
+    
+    @include media(xsmallScreen, smallScreen) {
+      flex-direction: column;
+      gap: 0.5em;
+    }
+    
     & > img,
     & > div {
       max-height: 300px;
       max-width: 500px;
       object-fit: cover;
+      
+      @include media(xsmallScreen, smallScreen) {
+        max-width: 100%;
+        width: 100%;
+      }
     }
   }
 }
@@ -2529,7 +2544,11 @@ body {
       margin-right: auto;
 
       @include media(xsmallScreen) {
-        margin-left: 170px;
+        margin-left: 0;
+        margin-right: 0;
+        padding-left: 1em;
+        padding-right: 1em;
+        max-width: 100%;
       }
     }
   }
